Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-01-22 (SVN):
    * vid_mgl4.c, vid_win.c: Now that we early-read _vid_default_mode_win
      from the config, removed extra checks from the firstupdate code.
      Dropped support for remembering the window position and -resetwin.
      Position the window centered upon creation using the CenterWindow()
      procedure taken from gl_vidnt.c. Removed vid_window_x, vid_window_y
      compatibility vars from vid_dos.c.
    * updated beta date stamp to 2012-01-22.

2012-01-21 (SVN):
    * Removed RotatePointAroundVector and its two helpers from mathlib.
      Added TurnVector() helper from fitzquake and made R_SetFrustum()
      of gl_rmain.c to use that instead of RotatePointAroundVector().
      Changed MYgluPerspective() to calculate xmax using r_refdef.fov_x
      instead of the aspect ratio.
    * updated beta date stamp to 2012-01-21.

2012-01-20 (SVN):
    * r_main.c (R_DrawViewModel): Enable drawing of the view model when
      fov is greater than 90, i.e. disabled r_fov_greater_than_90 check.

2012-01-20 (SVN):
    * screen.c, gl_screen.c, r_main.c, gl_rmain.c, render.h, mathlib.c,
      mathlib.h: Implemented fov in opengl hexen2, useful for widescreen
      resolutions. Revised the implementations in hexenworld, as well as
      the software renderer.

2012-01-20 (SVN):
    * vid_win.c, vid_mgl4.c: Restore saved video mode on startup. Not
      exactly beautiful, but at least it works now...

2012-01-20 (SVN):
    * screen.c, gl_screen.c: Updated hw showfps code from quakespasm and
      copied over to hexen2, too.

2012-01-20 (SVN):
    * hexenworld cl_main.c: Reverted rev. 4471 and made the default rate
      value form 2500 again for now.
    * updated beta date stamp to 2012-01-20.

2012-01-19 (SVN):
    * hexenworld, gl_screen.c (SCR_UpdateScreen): Make sure vid.numpages
      is set correctly.
    * hexenworld: Moved fps display variables from clmain.c to screen.c.
